--- a/web/jinja2/web/index.html.j2
+++ b/web/jinja2/web/index.html.j2
@@ -5,9 +5,65 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container-fluid">
-        <p>
-            Hello, World!
-        </p>
+
+<div class="card card-image" style="background-image: url({{ static('web/media/private/index-cover.jpg') }}); background-size: cover; background-position-y: 50%; box-shadow: none;">
+    <div class="text-white text-center rgba-stylish-strong py-5 px-4">
+        <div class="py-5">
+            <h5 class="h5 deep-orange-text"><i class="fas fa-camera-retro"></i> UP Iris Photography</h5>
+            <h2 class="card-title h2 my-4 py-2">{{ lipsum(1, False, 5, 6) }}</h2>
+            <div class="container">
+                <p class="mb-4 pb-2 px-md-5 mx-md-5">{{ lipsum(1, False, 50, 51) }}</p>
+            </div>
+            <a class="btn deep-orange"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
+        </div>
     </div>
+</div>
+
+<div class="container-fluid p-5">
+    <div class="row">
+        <div class="col ml-md-5">
+            <h1 class="h1 h1-responsive">{{ lipsum(1, False, 5, 6) }}</h1>
+            <a class="btn deep-orange my-4"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
+        </div>
+        <div class="col mr-md-5">
+            {{ lipsum(2, True, 30, 40) }}
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid blue darken-4 py-5 text-white">
+    <div class="row pb-5 mb-5">
+        <div class="col-sm ml-md-5">
+            <img src="{{ static('web/media/private/index-block1.jpg') }}" style="max-width: 90%; height: auto;" />
+        </div>
+        <div class="col-sm mr-md-5">
+            <h1 class="h1 h1-responsive">{{ lipsum(1, False, 3, 4) }}</h1>
+            <p class="mt-5">{{ lipsum(1, False, 50, 51) }}</p>
+            <a class="btn deep-orange my-5"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm ml-md-5">
+            <h1 class="h1 h1-responsive">{{ lipsum(1, False, 3, 4) }}</h1>
+            <p class="mt-5">{{ lipsum(1, False, 50, 51) }}</p>
+            <a class="btn deep-orange my-5"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
+        </div>
+        <div class="col-sm mr-md-5">
+            <img src="{{ static('web/media/private/index-block2.jpg') }}" style="max-width: 90%; height: auto;" />
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid p-5">
+    <blockquote class="blockquote">
+        <h2 class="h2 h2-responsive mb-0 mr-md-5 pr-md-5">
+            {{ lipsum(1, False, 15, 16) }}
+        </h2>
+        <footer class="blockquote-footer mb-3">{{ lipsum(1, False, 3, 4) }} <cite>{{ lipsum(1, False, 2, 3) }}</cite></footer>
+    </blockquote>
+    <div class="text-center">
+        <img src="{{ static('web/media/private/index-block3.jpg') }}" style="max-width: 100%; height: auto;" />
+    </div>
+</div>
+
 {% endblock %}
