--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/js/mdb.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.8.1/cloudinary-core.min.js" type="text/javascript"></script>
 
     <title>{% block title %}{% endblock %} | UP Iris Photography</title>
     <meta name="description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
@@ -22,39 +24,14 @@
     <meta property="og:locale" content="en_US" />
     <meta property="twitter:card" content="summary" />
 
-    <style>
-        html {
-            font-size: 1rem;
-        }
-
-        @include media-breakpoint-up(sm) {
-            html {
-                font-size: 1.2rem;
-            }
-        }
-
-        @include media-breakpoint-up(md) {
-            html {
-                font-size: 1.4rem;
-            }
-        }
-
-        @include media-breakpoint-up(lg) {
-            html {
-                font-size: 1.6rem;
-            }
-        }
-
-        body {
-            font-family: 'Futura Bk BT', sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ static('web/css/index.css') }}" />
+    <script src="{{ static('web/js/base.js') }}"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="box-shadow: none; z-index: 1;">
-        <a class="navbar-brand" href="{{ url('home') }}">
-            <img src="{{ static('web/media/private/logo.png') }}" height="100" />
+        <a class="navbar-brand cl" href="{{ url('home') }}">
+            <img src="{{ static('web/media/private/logo.png') }}" width="100" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false", aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
