--- a/web/jinja2/web/index.html.j2
+++ b/web/jinja2/web/index.html.j2
@@ -6,6 +6,8 @@
 
 {% block body %}
 
+<script src="{{ static('web/js/index.js') }}"></script>
+
 <div class="card card-image" style="background-image: url({{ static('web/media/private/index-cover.jpg') }}); background-size: cover; background-position-y: 50%; box-shadow: none;">
     <div class="text-white text-center rgba-stylish-strong py-5 px-4">
         <div class="py-5">
@@ -33,7 +35,7 @@
 
 <div class="container-fluid blue darken-4 py-5 text-white">
     <div class="row pb-5 mb-5">
-        <div class="col-sm ml-md-5">
+        <div class="col-sm ml-md-5 cl">
             <img src="{{ static('web/media/private/index-block1.jpg') }}" style="max-width: 90%; height: auto;" />
         </div>
         <div class="col-sm mr-md-5">
@@ -48,7 +50,7 @@
             <p class="mt-5">{{ lipsum(1, False, 50, 51) }}</p>
             <a class="btn deep-orange my-5"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
         </div>
-        <div class="col-sm mr-md-5">
+        <div class="col-sm mr-md-5 cl">
             <img src="{{ static('web/media/private/index-block2.jpg') }}" style="max-width: 90%; height: auto;" />
         </div>
     </div>
@@ -61,7 +63,7 @@
         </h2>
         <footer class="blockquote-footer mb-3">{{ lipsum(1, False, 3, 4) }} <cite>{{ lipsum(1, False, 2, 3) }}</cite></footer>
     </blockquote>
-    <div class="text-center">
+    <div class="text-center cl">
         <img src="{{ static('web/media/private/index-block3.jpg') }}" style="max-width: 100%; height: auto;" />
     </div>
 </div>
