--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -26,6 +26,8 @@
 
     <link rel="stylesheet" href="{{ static('web/css/index.css') }}" />
     <script src="{{ static('web/js/base.js') }}"></script>
+
+    <link rel="shortcut icon" type="image/png" href="" />
 </head>
 
 <body>
