fixed js search for img under parent div

--- a/web/jinja2/web/index.html.j2
+++ b/web/jinja2/web/index.html.j2
@@ -8,7 +8,7 @@
 
 <script src="{{ static('web/js/index.js') }}"></script>
 
-<div class="card card-image" style="background-image: url({{ static('web/media/private/index-cover.jpg') }}); background-size: cover; background-position-y: 50%; box-shadow: none;">
+<div class="card card-image">
     <div class="text-white text-center rgba-stylish-strong py-5 px-4">
         <div class="py-5">
             <h5 class="h5 deep-orange-text"><i class="fas fa-camera-retro"></i> UP Iris Photography</h5>
@@ -36,7 +36,7 @@
 <div class="container-fluid blue darken-4 py-5 text-white">
     <div class="row pb-5 mb-5">
         <div class="col-sm ml-md-5 cl">
-            <img src="{{ static('web/media/private/index-block1.jpg') }}" style="max-width: 90%; height: auto;" />
+            <img src="#" style="max-width: 90%; height: auto;" />
         </div>
         <div class="col-sm mr-md-5">
             <h1 class="h1 h1-responsive">{{ lipsum(1, False, 3, 4) }}</h1>
@@ -51,7 +51,7 @@
             <a class="btn deep-orange my-5"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
         </div>
         <div class="col-sm mr-md-5 cl">
-            <img src="{{ static('web/media/private/index-block2.jpg') }}" style="max-width: 90%; height: auto;" />
+            <img src="#" style="max-width: 90%; height: auto;" />
         </div>
     </div>
 </div>
@@ -64,7 +64,7 @@
         <footer class="blockquote-footer mb-3">{{ lipsum(1, False, 3, 4) }} <cite>{{ lipsum(1, False, 2, 3) }}</cite></footer>
     </blockquote>
     <div class="text-center cl">
-        <img src="{{ static('web/media/private/index-block3.jpg') }}" style="max-width: 100%; height: auto;" />
+        <img src="#" style="max-width: 100%; height: auto;" />
     </div>
 </div>
 
