--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -33,7 +33,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="box-shadow: none; z-index: 1;">
         <a class="navbar-brand cl" href="{{ url('home') }}">
-            <img src="{{ static('web/media/private/logo.png') }}" width="100" />
+            <img src="#" width="100" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false", aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
