add fade transitions to page

--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" type="image/png" href="" />
 </head>
 
-<body>
+<body class="fade-out">
     <nav class="navbar navbar-expand-lg navbar-light" style="box-shadow: none; z-index: 1;">
         <a class="navbar-brand cl" href="{{ url('home') }}">
             <img src="#" width="100" />
