add opengraph image card

--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -22,6 +22,7 @@
     <meta name="og:description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="" />
     <meta property="twitter:card" content="summary" />
 
     <link rel="stylesheet" href="{{ static('web/css/index.css') }}" />
