--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -15,15 +15,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.8.1/cloudinary-core.min.js" type="text/javascript"></script>
 
-    <title>{% block title %}{% endblock %} | UP Iris Photography</title>
+    <title>{% block title %}{% endblock %} | UP Iris</title>
     <meta name="description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
-    <meta property="og:title" content="UP Iris Photography" />
+    <meta property="og:title" content="UP Iris" />
     <meta property="og:url" content="http://upiris.herokuapp.com" />
     <meta name="og:description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="" />
-    <meta property="twitter:card" content="summary" />
+    <meta property="og:site_name" content="UP Iris"
+    <meta name="twitter:title" content="UP Iris" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:image:alt" content="UP Iris" />
+    <meta name="twitter:description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
+    <meta name="twitter:site" content="@upirisofficial" />
+    <meta property="fb:app_id" content="upiris" />
 
     <link rel="stylesheet" href="{{ static('web/css/index.css') }}" />
     <script src="{{ static('web/js/base.js') }}"></script>
