--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -16,26 +16,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.8.1/cloudinary-core.min.js" type="text/javascript"></script>
 
     <title>{% block title %}{% endblock %} | UP Iris</title>
-    <meta name="description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
-    <meta property="og:title" content="UP Iris" />
-    <meta property="og:url" content="http://upiris.herokuapp.com" />
-    <meta name="og:description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="" />
-    <meta property="og:site_name" content="UP Iris"
-    <meta name="twitter:title" content="UP Iris" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="" />
-    <meta name="twitter:image:alt" content="UP Iris" />
-    <meta name="twitter:description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
-    <meta name="twitter:site" content="@upirisofficial" />
-    <meta property="fb:app_id" content="upiris" />
+
+    {% if not settings.DEBUG %}
+        <meta name="description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
+        <meta property="og:title" content="UP Iris" />
+        <meta property="og:url" content="http://upiris.herokuapp.com" />
+        <meta name="og:description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
+        <meta property="og:type" content="website" />
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:image" content="{{ graph_image }}" />
+        <meta property="og:site_name" content="UP Iris"
+        <meta name="twitter:title" content="UP Iris" />
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:image" content="{{ graph_image }}" />
+        <meta name="twitter:image:alt" content="UP Iris" />
+        <meta name="twitter:description" content="UP Iris is a university-wide photography organization based in the College of Fine Arts, University of the Philippines, Diliman." />
+        <meta name="twitter:site" content="@upirisofficial" />
+        <meta property="fb:app_id" content="upiris" />
+    {% endif %}
 
     <link rel="stylesheet" href="{{ static('web/css/index.css') }}" />
     <script src="{{ static('web/js/base.js') }}"></script>
 
-    <link rel="shortcut icon" type="image/png" href="" />
+    <link rel="shortcut icon" type="image/png" href="{{ favicon }}" />
 </head>
 
 <body class="fade-out">
@@ -62,7 +65,7 @@
         <div class="container-fluid text-center text-md-left">
             <div class="row">
                 <div class="col-8 mt-md-0 mt-3">
-                    <h4 class="text-uppercase">UP Iris Photography</h4>
+                    <h2 class="h2 h2-responsive text-uppercase">UP Iris Photography</h2>
                     <h5>#BeIRISistible</h5>
                     <p>Made by <a href="https://kdphotography.herokuapp.com" target="_blank">Kenneth V Domingo</a></p>
                 </div>
@@ -70,8 +73,10 @@
                 <div class="col mb-md-0 mb-3">
                     <h5 class="text-uppercase">About</h5>
                     <ul class="list-unstyled">
-                        <li>Our Mission</li>
-                        <li>Our Vision</li>
+                        <li><a href="#">Our Mission</a></li>
+                        <li><a href="#">Our Vision</a></li>
+                        <li><a href="#">Our Principles</a></li>
+                        <li><a href="#">Our Objectives</a></li>
                     </ul>
                 </div>
                 <hr class="clearfix w-100 d-md-none pb-3" />
@@ -97,5 +102,11 @@
             </p>
         </div>
     </footer>
+
+    <script>
+    document.addEventListener("DOMContentLoaded", () => {
+        cl.responsive()
+    });
+    </script>
 </body>
 </html>
