--- a/web/jinja2/web/index.html.j2
+++ b/web/jinja2/web/index.html.j2
@@ -16,7 +16,7 @@
             <div class="container">
                 <p class="mb-4 pb-2 px-md-5 mx-md-5">{{ lipsum(1, False, 50, 51) }}</p>
             </div>
-            <a class="btn deep-orange"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
+            <a class="btn peach-gradient"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
         </div>
     </div>
 </div>
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col ml-md-5">
             <h1 class="h1 h1-responsive">{{ lipsum(1, False, 5, 6) }}</h1>
-            <a class="btn deep-orange my-4"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
+            <a class="btn peach-gradient my-4"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
         </div>
         <div class="col mr-md-5">
             {{ lipsum(2, True, 30, 40) }}
@@ -41,14 +41,14 @@
         <div class="col-sm mr-md-5">
             <h1 class="h1 h1-responsive">{{ lipsum(1, False, 3, 4) }}</h1>
             <p class="mt-5">{{ lipsum(1, False, 50, 51) }}</p>
-            <a class="btn deep-orange my-5"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
+            <a class="btn peach-gradient my-5"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
         </div>
     </div>
     <div class="row">
         <div class="col-sm ml-md-5">
             <h1 class="h1 h1-responsive">{{ lipsum(1, False, 3, 4) }}</h1>
             <p class="mt-5">{{ lipsum(1, False, 50, 51) }}</p>
-            <a class="btn deep-orange my-5"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
+            <a class="btn peach-gradient my-5"><i class="fas fa-clone left"></i>&nbsp;{{ lipsum(1, False, 2, 3) }}</a>
         </div>
         <div class="col-sm mr-md-5 cl">
             <img src="#" style="max-width: 90%; height: auto;" />
