attempt locally-served font

--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -35,6 +35,12 @@
         <meta property="fb:app_id" content="upiris" />
     {% endif %}
 
+    <style>
+        @font-face {
+            font-family: 'Futura Bk BT';
+            src: local('Futura Bk BT'), url("{{ static('web/fonts/Futura Book.ttf') }}") format('truetype');
+        }
+    </style>
     <link rel="stylesheet" href="{{ static('web/css/index.css') }}" />
     <script src="{{ static('web/js/base.js') }}"></script>
 
