--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/css/mdb.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -37,11 +38,36 @@
 
     <style>
         @font-face {
-            font-family: 'Futura Bk BT';
+            font-family: 'Futura Book';
             src: local('Futura Bk BT'), url("{{ static('web/fonts/Futura Book.ttf') }}") format('truetype');
         }
+
+        @font-face {
+            font-family: 'Futura Book Italic';
+            src: local('Futura Bk BT'), url("{{ static('web/fonts/Futura Book Italic.ttf') }}") format('truetype');
+        }
+
+        @font-face {
+            font-family: 'Futura Light';
+            src: local('Futura Lt BT'), url("{{ static('web/fonts/Futura Light.ttf') }}") format('truetype');
+        }
+
+        @font-face {
+            font-family: 'Futura Light Italic';
+            src: local('Futura Lt BT'), url("{{ static('web/fonts/Futura Light Italic.ttf') }}") format('truetype');
+        }
+
+        @font-face {
+            font-family: 'Futura Medium';
+            src: local('Futura Hv BT'), url("{{ static('web/fonts/Futura Medium.ttf') }}") format('truetype');
+        }
+
+        @font-face {
+            font-family: 'Futura Medium Italic';
+            src: local('Futura Hv BT'), url("{{ static('web/fonts/Futura Medium Italic.ttf') }}") format('truetype');
+        }
     </style>
-    <link rel="stylesheet" href="{{ static('web/css/index.css') }}" />
+    <link rel="stylesheet" href="{{ static('web/css/base.css') }}" />
     <script src="{{ static('web/js/base.js') }}"></script>
 
     <link rel="shortcut icon" type="image/png" href="{{ favicon }}" />
