update header photos

--- a/web/jinja2/web/base.html.j2
+++ b/web/jinja2/web/base.html.j2
@@ -75,7 +75,7 @@
     <link rel="shortcut icon" type="image/png" href="{{ favicon }}" />
 </head>
 
-<body class="fade-out">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light" style="box-shadow: none; z-index: 1;">
         <a class="navbar-brand cl" href="{{ url('home') }}">
             <img src="{{ nav_logo }}" width="100" />
