added Member(s) pages to react port

--- a/frontend/jinja2/frontend/index.html.j2
+++ b/frontend/jinja2/frontend/index.html.j2
@@ -35,6 +35,7 @@
 
     <link rel="shortcut icon" href="https://res.cloudinary.com/kdphotography-assets/image/upload/v1/upirisorg/web/static/web/media/private/logo.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <title>UP Iris</title>
 </head>
 <body>
     <div id="root"></div>
