--- a/frontend/static/frontend/js/components/App.css
+++ b/frontend/static/frontend/js/components/App.css
@@ -30,25 +30,30 @@
 
 html {
     font-family: 'Futura Book', sans-serif;
-    font-size: 1rem;
     scroll-behavior: smooth;
 }
 
 @media (max-width: 576px) {
     html {
-        font-size: 1.2rem;
+        font-size: 0.9rem;
     }
 }
 
 @media (max-width: 768px) {
     html {
-        font-size: 1.4rem;
+        font-size: 1rem;
     }
 }
 
 @media (max-width: 992px) {
     html {
-        font-size: 1.6rem;
+        font-size: 1.05rem;
+    }
+}
+
+@media (min-width: 992px) {
+    html {
+        font-size: 1.1rem;
     }
 }
 
